# flutube

./: .gitignore  CMakeLists.txt  FluTube.entitlements  build.sh  package.sh  test_ytdlp.sh
.github/workflows/: build-windows.yml
Resources/: README.txt
Source/: Bitcrush.cpp  Bitcrush.h  HazyEffect.cpp  HazyEffect.h  Hum.cpp  Hum.h  LoFiChain.cpp  LoFiChain.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleEngine.cpp  SampleEngine.h  TapeDelay.cpp  TapeDelay.h  VinylNoise.cpp  VinylNoise.h  WaveformDisplay.cpp  WaveformDisplay.h  WavyEffect.cpp  WavyEffect.h  YouTubeLoader.cpp  YouTubeLoader.h
installer/: flutube.nsi
